sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: '(' expected but identifier found.
			if plusPetit(j, j+1){
                           ^AlgBubbleSort2:9: error: illegal start of simple expression
		}
                ^